docs/src/css/style.css
/* ... */
input:checked + .slider:before {
  left: calc(100% - (var(--size-of-icon,1.4em) + var(--slider-offset,0.3em)));
  background: #303136;
  /* change the value of second inset in box-shadow to change the angle and direction of the moon  */
  box-shadow: inset -3px -2px 5px -2px #8983f7, inset -10px -4px 0 0 #a3dafb;
}

/* About Content */

#about-section {
  margin-top: 20rem;
}

.about-div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.about-header {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.about-header span , .project-card-desc a{
  font-family: "Rajdhani", sans-serif;
  font-weight: 500;
  color: #686868;
  text-align: center;
}

.about-header h1{
  font-family: "Bebas Neue", cursive;
  font-size: 4rem;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  color: transparent;
  -webkit-text-stroke: 1px #717388;
  filter: drop-shadow(0 0 25px #717388);
  gap: 1rem;
}

.about-text {
  display: flex;
  flex-direction: column;
  text-align: center;
  justify-content: center;
  flex-wrap: wrap;
  margin-top: 15rem;
  width: 90vw;

  font-size: 1.5rem;
}

.resume-div {
  margin-top: 5rem;
  text-align: center;
}

.resume-div span {
  font-family: "Bebas Neue", cursive;
}

.resume-div .resume-group {
  display: flex;
  justify-content: center;
  align-items: center;
}

.resume-div .resume-group a{
  font-family: "Bebas Neue", cursive;
  text-align: center;
  position: relative;
  display: block;
  padding: 4px 20px;
  height: 1.9rem;
  background: transparent;
  border: 1px solid currentColor;
  border-right: none;
  font-weight: 500;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
}

.resume-div .resume-group a:hover {
  background: #6f00ff;
  color: #0f141a;
}

.resume-div .resume-group select {
  display: none;
}

.resume-div .resume-group a.pt-br-download {
  background: #009c37;
  transition: .5s ease;
}

.resume-div .resume-group a.pt-br-download:hover {
  background: #fee000;
  color: #0f141a;
}

.resume-div .resume-group a.en-download {
  background: #002b5fc5;
  transition: .5s ease;
}

.resume-div .resume-group a.en-download:hover {
  background: #be3227;
  color: #0f141a;
}

/* Projects */ 


#projects-section, #knowledge-section {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;

  gap: 3rem;

  padding-top: 10rem;
}

.projects-section-div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  
}

.projects-section-title, .knowledge-section-title {
  font-family: "Bebas Neue", cursive;
  text-align: center;
  font-size: 4rem;
  font-weight: 400;
}

.projects-wrap {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;

  width: 90vw;
  height: fit-content;
}

.projects-wrap-div, .knowledgies-div, .form-div  {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  margin-top: 10rem;
  width: 100%;
}

.list-title {
  width: 50%;
  text-align: left;
  font-family: "Bebas Neue", cursive;
  font-size: 2rem;
}

.projects-list {
  display: grid;
  grid-auto-flow: row;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  justify-content: center;
  align-items: center;

  gap: 2rem;
  width: 100%;
  padding-top: 1rem;
}

.card {
  position: relative;
  width: 280px;
  height: 400px;

  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
  border-radius: 15px;
  overflow: hidden;
  display: block;
  justify-content: center;
  align-items: center;
}

.card .content {
  padding: 20px;
  text-align: center;
  transform: translateY(-20rem);
  opacity: 1;
  transition: .5s;
}

.card img{
  width: 100%;
  height: 125%;
  object-fit: cover;
  object-position: 50% 50%;
  transition: .5s ease-out;
  z-index: -1;
}


.card:hover img {
  object-position: 55% 50%;
  transition: .5s;
}

.card:hover .content {
  transform: translateY(-22rem);
  opacity: 1;
}

.card .content h2 {
  position: absolute;
  top: -200px;
  right: -1rem;
  font-size: 7rem;
  color: #3a3b407a;
  pointer-events: none;
  z-index: -1;
}

.card .content h3 {
  font-size: 1.8em;
  color: #fff;
  z-index: 1;
} 

.card .content p {
  font-size: 1em;
  color: #fff;
  font-weight: 300;
}

.card .content a {
  position: relative;
  display: inline-block;
  padding: 8px 20px;
  margin-top: 15px;
  color: #e6e6e6;
  background: #0f141aad;
  border: 1px solid currentColor;
  font-weight: 500;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
}

.card .content a:hover {
  background: #6f00ff;
  color: #fff;
}


/* Knowledge section */
.knowledgies-div {
  row-gap: 5rem;
}

.knowledgies-wrap{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  margin-bottom: 10rem;
  gap: 2rem;
}

.knowledgies-card-div, .knowledgies-card-body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.knowledgies-card-div {
  width: 10rem;
}

.knowledgies-card-body {
  gap: .6rem;

}

.knowledgies-card-body span{
  font-family: "Bebas Neue", cursive;
  font-size: 1.4rem;
  font-weight: 400;
}

.knowledgies-card-body svg, .svg-path {
  width: 3rem;
  
}

.knowledgies-info span {
  display: flex;
  justify-content: center;
  align-items: center;

  width: 10rem;
  height: fit-content;
  
  border-radius: .6rem;

  font-size: 1.2rem;
  font-family: "Poppins", sans-serif;
  background-color: #0f141a;
  color: #f4f4f5;

  opacity: 0;
  transition: .6s ease;
}

.knowledgies-card-div:hover > .knowledgies-info span {
  opacity: 1;
  transition: .3 ease;
}

.knowledgies-card-body svg path,.knowledgies-card-body svg circle,.svg-path {
  fill: #0f141a;
  
}



/* footer and contacts */

#footer-contacs {
  margin-top: 100rem;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;

  background-color: #91ff00;
  width: 100vw;
}
/* ... */

